--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: base
 ---
-<div style="max-height: 600px; overflow: hidden;" class="d-flex align-items-center">
-    <img src="assets/images/hero-image.jpg" class="img-fluid" alt="Cover image">
+<div style="max-height: 750px; overflow: hidden;" class="d-flex align-items-center">
+    <img src="assets/images/shopfront.jpeg" class="img-fluid" alt="Cover image">
 </div>
 <div class="container">
     <h1 class="display-2 mt-5">A Taste of Thailand</h1>
