--- a/menu.html
+++ b/menu.html
@@ -67,33 +67,18 @@ layout: base
                                 <div class="card-body">
                                     <h4>Set menu A</h4>
                                     <div>For 2 people</div>
-                                    <div>32.00</div>
-                                    <div class="mb-2 text-muted">(16.00 per person)</div>
-                                    <div class="lead">
-                                        A Taste of Thai Platter
-                                        <small>({{site.data.menu[0].items[10].menuId}})</small>
-                                    </div>
+                                    <div>£32.00</div>
+                                    <div class="mb-2 text-muted">(£16.00 per person)</div>
+                                    <div class="lead">A Taste of Thai Platter</div>
                                     <div>{{site.data.menu[0].items[10].description}}</div>
                                     <div>--------</div>
-                                    <div class="lead">
-                                        {{site.data.menu[8].items[5].name}}
-                                        <small>({{site.data.menu[8].items[5].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[8].items[5].name}}</div>
                                     <div>{{site.data.menu[8].items[5].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[4].items[4].name}}
-                                        <small>({{site.data.menu[4].items[4].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[4].items[4].name}}</div>
                                     <div>{{site.data.menu[4].items[4].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[9].items[0].name}}
-                                        <small>({{site.data.menu[9].items[0].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[9].items[0].name}}</div>
                                     <div>{{site.data.menu[9].items[0].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[11].items[1].name}}
-                                        <small>({{site.data.menu[11].items[1].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[11].items[1].name}}</div>
                                     <div>{{site.data.menu[11].items[1].description}}</div>
                                 </div>
                             </div>
@@ -105,44 +90,24 @@ layout: base
                                 <div class="card-body">
                                     <h4>Set menu B</h4>
                                     <div>For 3 people</div>
-                                    <div>51.00</div>
-                                    <div class="mb-2 text-muted">(17.00 per person)</div>
+                                    <div>£51.00</div>
+                                    <div class="mb-2 text-muted">(£17.00 per person)</div>
                                     <div class="lead">Chicken satay, steamed dumplings and prawn pancake</div>
                                     <div class="lead">OR</div>
-                                    <div class="lead">
-                                        A Taste of Thai Platter <small>({{site.data.menu[0].items[10].menuId}})</small>
-                                    </div>
+                                    <div class="lead">A Taste of Thai Platter</div>
                                     <div>{{site.data.menu[0].items[10].description}}</div>
                                     <div>--------</div>
-                                    <div class="lead">
-                                        {{site.data.menu[8].items[3].name}}
-                                        <small>({{site.data.menu[8].items[3].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[8].items[3].name}}</div>
                                     <div>{{site.data.menu[8].items[3].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[4].items[3].name}}
-                                        <small>({{site.data.menu[4].items[3].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[4].items[3].name}}</div>
                                     <div>{{site.data.menu[4].items[3].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[6].items[1].name}}
-                                        <small>({{site.data.menu[6].items[1].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[6].items[1].name}}</div>
                                     <div>{{site.data.menu[6].items[1].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[9].items[0].name}}
-                                        <small>({{site.data.menu[9].items[0].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[9].items[0].name}}</div>
                                     <div>{{site.data.menu[9].items[0].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[10].items[5].name}}
-                                        <small>({{site.data.menu[10].items[5].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[10].items[5].name}}</div>
                                     <div>{{site.data.menu[10].items[5].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[11].items[1].name}}
-                                        <small>({{site.data.menu[11].items[1].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[11].items[1].name}}</div>
                                     <div>{{site.data.menu[11].items[1].description}}</div>
                                 </div>
                             </div>
@@ -154,52 +119,28 @@ layout: base
                                 <div class="card-body">
                                     <h4>Set menu C</h4>
                                     <div>For 4 people</div>
-                                    <div>72.00</div>
-                                    <div class="mb-2 text-muted">(18.00 per person)</div>
+                                    <div>£72.00</div>
+                                    <div class="mb-2 text-muted">(£18.00 per person)</div>
                                     <div class="lead">Chicken satay, mini spring rolls, prawns on toast, steamed
                                         dumplings
                                     </div>
                                     <div class="lead">OR</div>
-                                    <div class="lead">
-                                        A Taste of Thai Platter (for 4 people)
-                                        <small>({{site.data.menu[0].items[10].menuId}})</small>
-                                    </div>
+                                    <div class="lead">A Taste of Thai Platter (for 4 people)</div>
                                     <div>{{site.data.menu[0].items[10].description}}</div>
                                     <div>--------</div>
-                                    <div class="lead">
-                                        {{site.data.menu[7].items[1].name}}
-                                        <small>({{site.data.menu[7].items[1].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[7].items[1].name}}</div>
                                     <div>{{site.data.menu[7].items[1].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[4].items[3].name}}
-                                        <small>({{site.data.menu[4].items[3].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[4].items[3].name}}</div>
                                     <div>{{site.data.menu[4].items[3].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[5].items[3].name}}
-                                        <small>({{site.data.menu[5].items[3].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[5].items[3].name}}</div>
                                     <div>{{site.data.menu[5].items[3].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[6].items[0].name}}
-                                        <small>({{site.data.menu[6].items[0].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[6].items[0].name}}</div>
                                     <div>{{site.data.menu[6].items[0].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[9].items[0].name}}
-                                        <small>({{site.data.menu[9].items[0].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[9].items[0].name}}</div>
                                     <div>{{site.data.menu[9].items[0].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[10].items[0].name}}
-                                        <small>({{site.data.menu[10].items[0].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[10].items[0].name}}</div>
                                     <div>{{site.data.menu[10].items[0].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[11].items[1].name}}
-                                        <small>({{site.data.menu[11].items[1].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[11].items[1].name}}</div>
                                     <div>{{site.data.menu[11].items[1].description}}</div>
                                 </div>
                             </div>
@@ -211,54 +152,27 @@ layout: base
                                 <div class="card-body">
                                     <h4>Set menu D</h4>
                                     <div>For 4 people</div>
-                                    <div>80.00</div>
-                                    <div class="mb-2 text-muted">(20.00 per person)</div>
-                                    <div class="lead">
-                                        A Taste of Thai Platter (for 4 people)
-                                        <small>({{site.data.menu[0].items[10].menuId}})</small>
-                                    </div>
+                                    <div>£80.00</div>
+                                    <div class="mb-2 text-muted">(£20.00 per person)</div>
+                                    <div class="lead">A Taste of Thai Platter (for 4 people)</div>
                                     <div>{{site.data.menu[0].items[10].description}}</div>
                                     <div>--------</div>
-                                    <div class="lead">
-                                        {{site.data.menu[1].items[0].name}}
-                                        <small>({{site.data.menu[1].items[0].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[1].items[0].name}}</div>
                                     <div>{{site.data.menu[1].items[0].description}}</div>
                                     <div>--------</div>
-                                    <div class="lead">
-                                        {{site.data.menu[8].items[5].name}}
-                                        <small>({{site.data.menu[8].items[5].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[8].items[5].name}}</div>
                                     <div>{{site.data.menu[8].items[5].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[3].items[2].name}}
-                                        <small>({{site.data.menu[3].items[2].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[3].items[2].name}}</div>
                                     <div>{{site.data.menu[3].items[2].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[5].items[1].name}}
-                                        <small>({{site.data.menu[5].items[1].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[5].items[1].name}}</div>
                                     <div>{{site.data.menu[5].items[1].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[6].items[2].name}}
-                                        <small>({{site.data.menu[6].items[2].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[6].items[2].name}}</div>
                                     <div>{{site.data.menu[6].items[2].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[9].items[0].name}}
-                                        <small>({{site.data.menu[9].items[0].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[9].items[0].name}}</div>
                                     <div>{{site.data.menu[9].items[0].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[10].items[5].name}}
-                                        <small>({{site.data.menu[10].items[5].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[10].items[5].name}}</div>
                                     <div>{{site.data.menu[10].items[5].description}}</div>
-                                    <div class="lead">
-                                        {{site.data.menu[11].items[1].name}}
-                                        <small>({{site.data.menu[11].items[1].menuId}})</small>
-                                    </div>
+                                    <div class="lead">{{site.data.menu[11].items[1].name}}</div>
                                     <div>{{site.data.menu[11].items[1].description}}</div>
                                 </div>
                             </div>
