set page titles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: base
+title: A Taste of Thailand
 ---
 <div style="max-height: 750px; overflow: hidden;" class="d-flex align-items-center">
     <img src="assets/images/shopfront.jpeg" class="img-fluid" alt="Cover image">
