added horizontal category selector; menu updates

--- a/index.html
+++ b/index.html
@@ -51,3 +51,6 @@ title: A Taste of Thailand
         </div>
     </div>
 </div>
+<div style="max-height: 600px; overflow: hidden;" class="d-flex align-items-center">
+    <img src="assets/images/hero-image.jpg" class="img-fluid" alt="Cover image">
+</div>
