--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 layout: base
 title: A Taste of Thailand
 ---
-<div style="max-height: 750px; overflow: hidden;" class="d-flex align-items-center">
-    <img src="assets/images/shopfront.jpeg" class="img-fluid" alt="Cover image">
+
+<div style="max-height: 450px; overflow: hidden;" class="d-flex align-items-center justify-content-center">
+    <img src="assets/images/hero.jpg" class="img-fluid" alt="Cover image">
 </div>
-<div class="container">
+<div class="container text-center">
     <h1 class="display-2 mt-5">A Taste of Thailand</h1>
     <div class="row mb-3">
         <div class="col">
@@ -13,7 +14,8 @@ title: A Taste of Thailand
                 For authentic Thai cuisine
             </p>
             <p>
-                Come and experience the authentic flavours of Thailand. Located in the heart of Richmond, North
+                Come and experience the authentic flavours of Thailand.<br>
+                Located in the heart of Richmond, North
                 Yorkshire, A Taste of Thailand is a cosy family run restaurant that will transport you to the exotic
                 land of smiles.
             </p>
@@ -21,16 +23,16 @@ title: A Taste of Thailand
     </div>
     <div class="row mb-5">
         <div class="col">
-            <h1 class="display-6 text-center">10% Discount on collection</h1>
+            <h1 class="display-6">10% Discount on collection</h1>
         </div>
     </div>
     <div class="row mb-5">
         <div class="col-12 col-sm-6">
-            <p class="lead text-center fw-bold">
+            <p class="leadfw-bold">
                 Address
             </p>
             <p>
-            <address class="text-center">
+            <address>
                 A Taste of Thailand<br>
                 15 King Street<br>
                 Richmond<br>
@@ -41,16 +43,16 @@ title: A Taste of Thailand
             </p>
         </div>
         <div class="col-12 col-sm-6">
-            <p class="lead text-center fw-bold">
+            <p class="lead fw-bold">
                 Opening times
             </p>
-            <p class="text-center">
+            <p>
                 Open every day
                 5:00-11:00pm
             </p>
         </div>
     </div>
 </div>
-<div style="max-height: 600px; overflow: hidden;" class="d-flex align-items-center">
-    <img src="assets/images/hero-image.jpg" class="img-fluid" alt="Cover image">
+<div style="max-height: 750px; overflow: hidden;" class="d-flex align-items-center">
+    <img src="assets/images/shopfront.jpeg" class="img-fluid" alt="Cover image">
 </div>
